kubernetes/kubernetes.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: e8c07749f0e4bb090724f3018c763bde6ef9597c
    app.quarkus.io/build-timestamp: 2022-11-08 - 12:27:46 +0000
  labels:
    app.kubernetes.io/name: primer-leocloud
    app.kubernetes.io/version: 1.0.0
  name: primer-leocloud
  namespace: student-t-spindler
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: primer-leocloud
    app.kubernetes.io/version: 1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: e8c07749f0e4bb090724f3018c763bde6ef9597c
    app.quarkus.io/build-timestamp: 2022-11-08 - 12:27:46 +0000
  labels:
    app.kubernetes.io/name: primer-leocloud
    app.kubernetes.io/version: 1.0.0
  name: primer-leocloud
  namespace: student-t-spindler
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: primer-leocloud
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: e8c07749f0e4bb090724f3018c763bde6ef9597c
        app.quarkus.io/build-timestamp: 2022-11-08 - 12:27:46 +0000
      labels:
        app.kubernetes.io/name: primer-leocloud
        app.kubernetes.io/version: 1.0.0
      namespace: student-t-spindler
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: ghcr.io/mctomspdo/primer-leocloud:1.0.0
          imagePullPolicy: Always
          name: primer-leocloud
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: e8c07749f0e4bb090724f3018c763bde6ef9597c
    app.quarkus.io/build-timestamp: 2022-11-08 - 12:27:46 +0000
  labels:
    app.kubernetes.io/name: primer-leocloud
    app.kubernetes.io/version: 1.0.0
  name: primer-leocloud
  namespace: student-t-spindler
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /primer(/|$)(.*)$
            pathType: Prefix
            backend:
              service:
                name: primer-leocloud
                port:
                  number: 80
